--- a/PMS-PropertyHapa.API/PMS-PropertyHapa.API.csproj
+++ b/PMS-PropertyHapa.API/PMS-PropertyHapa.API.csproj
@@ -36,6 +36,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\PMS-PropertyHapa.Models\PMS-PropertyHapa.Models.csproj" />
+	  <ProjectReference Include="..\PMS-PropertyHapa.Shared\PMS-PropertyHapa.Shared.csproj" />
 	</ItemGroup>
 
 </Project>
