--- a/PMS-PropertyHapa.API/appsettings.Development.json
+++ b/PMS-PropertyHapa.API/appsettings.Development.json
@@ -10,6 +10,8 @@
     "DefaultSQLConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=MagicVillaAPI_Part2;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ApiSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET"
+    "ValidAudience": "https://localhost:4200",
+    "ValidIssuer": "https://localhost:7178",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
