--- a/PMS-PropertyHapa.API/appsettings.json
+++ b/PMS-PropertyHapa.API/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=MagicVillaAPI_Part2;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=localhost\\SQLEXPRESS03;Database=MagicVillaAPI_Part2;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ApiSettings": {
     "ValidAudience": "https://localhost:4200",
