--- a/PMS-PropertyHapa.Admin/PMS-PropertyHapa.Admin.csproj
+++ b/PMS-PropertyHapa.Admin/PMS-PropertyHapa.Admin.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
+	  <UseRazorSourceGenerator>false</UseRazorSourceGenerator>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>PMS_PropertyHapa.Admin</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.39" />
