--- a/PMS-PropertyHapa.Admin/PMS-PropertyHapa.Admin.csproj
+++ b/PMS-PropertyHapa.Admin/PMS-PropertyHapa.Admin.csproj
@@ -53,6 +53,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="Views\Admin\Create.cshtml" />
+    <None Include="Views\Admin\Index.cshtml" />
+    <None Include="Views\Admin\Update.cshtml" />
     <None Include="Views\GroupRoles\Index.cshtml" />
     <None Include="Views\Groups\Create.cshtml" />
     <None Include="Views\Groups\Index.cshtml" />
