--- a/PMS-PropertyHapa/appsettings.json
+++ b/PMS-PropertyHapa/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PMS_PropertyHapaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PMS-PropertyHapa;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ServiceUrls": {
+    "VillaAPI": "https://localhost:7178"
   }
 }
