--- a/PMS-PropertyHapa/appsettings.json
+++ b/PMS-PropertyHapa/appsettings.json
@@ -11,5 +11,8 @@
   },
   "ServiceUrls": {
     "VillaAPI": "https://localhost:7178"
+  },
+  "ImageURl": {
+    "URL": "https://propertyhapa.com/SystemFiles/"
   }
 }
