--- a/PMS-PropertyHapa.Admin/PMS-PropertyHapa.Admin.csproj
+++ b/PMS-PropertyHapa.Admin/PMS-PropertyHapa.Admin.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="FluentFTP" Version="49.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.Abstractions" Version="2.1.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.1.39" />
