--- a/PMS-PropertyHapa/PMS-PropertyHapa.csproj
+++ b/PMS-PropertyHapa/PMS-PropertyHapa.csproj
@@ -149,6 +149,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
   
 	
 </Project>
