--- a/PMS-PropertyHapa/Properties/launchSettings.json
+++ b/PMS-PropertyHapa/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://propertyhapa.com;http://localhost:5087",
+      "applicationUrl": "https://localhost:7182;http://localhost:5087",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
