--- a/PMS-PropertyHapa/appsettings.Development.json
+++ b/PMS-PropertyHapa/appsettings.Development.json
@@ -1,3 +1,22 @@
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "ConnectionStrings": {
+//    "PMS_PropertyHapaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PMS-PropertyHapa;Trusted_Connection=True;MultipleActiveResultSets=true"
+//  },
+//  "ServiceUrls": {
+//    "VillaAPI": "https://localhost:7178"
+//  },
+//  "ImageURl": {
+//    "URL": "https://propertyhapa.com/SystemFiles/"
+//  }
+//}
+
 {
   "Logging": {
     "LogLevel": {
@@ -10,7 +29,7 @@
     "PMS_PropertyHapaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PMS-PropertyHapa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ServiceUrls": {
-    "VillaAPI": "https://localhost:7178"
+    "VillaAPI": "https://api.propertyhapa.com"
   },
   "ImageURl": {
     "URL": "https://propertyhapa.com/SystemFiles/"
