--- a/PMS-PropertyHapa/appsettings.json
+++ b/PMS-PropertyHapa/appsettings.json
@@ -13,7 +13,7 @@
 //    "VillaAPI": "https://localhost:7178"
 //  },
 //  "ImageURl": {
-//    "URL": "https://propertyhapa.com/SystemFiles/"
+//    "URL": "https://storage.propertyhapa.com/SystemFiles/"
 //  }
 //}
 
@@ -32,6 +32,6 @@
     "VillaAPI": "https://api.propertyhapa.com"
   },
   "ImageURl": {
-    "URL": "https://propertyhapa.com/SystemFiles/"
+    "URL": "https://storage.propertyhapa.com/SystemFiles/"
   }
 }
