--- a/PMS-PropertyHapa/appsettings.Development.json
+++ b/PMS-PropertyHapa/appsettings.Development.json
@@ -29,7 +29,7 @@
     "PMS_PropertyHapaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PMS-PropertyHapa;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ServiceUrls": {
-    "VillaAPI": "https://api.propertyhapa.com"
+    "VillaAPI": "https://localhost:7178"
   },
   "ImageURl": {
     "URL": "https://propertyhapa.com/SystemFiles/"
