--- a/PMS-PropertyHapa.Tenant/appsettings.json
+++ b/PMS-PropertyHapa.Tenant/appsettings.json
@@ -7,12 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PMS_PropertyHapaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PMS-PropertyHapa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=65.108.74.182\\MSSQLSERVER2019;Database=propert2_db;User Id=propert2;Password=!5i65ljG6;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
-  "ServiceUrls": {
-    "VillaAPI": "https://localhost:7178"
+  "ApiSettings": {
+    "ValidAudience": "https://localhost:7178",
+    "ValidIssuer": "https://localhost:7178",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   },
   "ImageURl": {
-    "URL": "https://storage.propertyhapa.com/SystemFiles/"
+    "URL": "https://propertyhapa.com/SystemFiles/"
   }
 }
