--- a/PMS-PropertyHapa.Owner/appsettings.json
+++ b/PMS-PropertyHapa.Owner/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PMS_PropertyHapaContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PMS-PropertyHapa;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultSQLConnection": "Server=65.108.74.182\\MSSQLSERVER2019;Database=propert2_db;User Id=propert2;Password=!5i65ljG6;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "ServiceUrls": {
     "VillaAPI": "https://localhost:7178"
