--- a/PMS-PropertyHapa.Tenant/appsettings.json
+++ b/PMS-PropertyHapa.Tenant/appsettings.json
@@ -14,6 +14,9 @@
     "ValidIssuer": "https://localhost:7178",
     "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   },
+  "ServiceUrls": {
+    "VillaAPI": "https://localhost:7178"
+  },
   "ImageURl": {
     "URL": "https://propertyhapa.com/SystemFiles/"
   }
