--- a/PMS-PropertyHapa.Tenant/appsettings.json
+++ b/PMS-PropertyHapa.Tenant/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=65.108.74.182\\MSSQLSERVER2019;Database=propert2_db;User Id=propert2;Password=!5i65ljG6;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "PMS_PropertyHapaTenantContextConnection": "Server=65.108.74.182\\MSSQLSERVER2019;Database=propert2_db;User Id=propert2;Password=!5i65ljG6;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "ApiSettings": {
     "ValidAudience": "https://localhost:7178",
