--- a/PMS-PropertyHapa.Shared/PMS-PropertyHapa.Shared.csproj
+++ b/PMS-PropertyHapa.Shared/PMS-PropertyHapa.Shared.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Magick.NET.Core" Version="13.6.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageReference Include="Twilio" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
