--- a/PMS-PropertyHapa/PMS-PropertyHapa.csproj
+++ b/PMS-PropertyHapa/PMS-PropertyHapa.csproj
@@ -20,6 +20,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Twilio" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
