--- a/PMS-PropertyHapa.Staff/PMS-PropertyHapa.Staff.csproj
+++ b/PMS-PropertyHapa.Staff/PMS-PropertyHapa.Staff.csproj
@@ -524,6 +524,7 @@
 	<ItemGroup>
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="DataTables.AspNet.Mvc5" Version="2.0.2" />
+		<PackageReference Include="Google.Cloud.Storage.V1" Version="4.10.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.26" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.26" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
