StaffCenter(FAQ, Contact Us, Book a free Demo and Video Tutorial) CRUD complete
Documents DocumentType Added

--- a/PMS-PropertyHapa.Staff/appsettings.json
+++ b/PMS-PropertyHapa.Staff/appsettings.json
@@ -15,6 +15,9 @@
   "ImageURl": {
     "URL": "https://storage.propertyhapa.com/SystemFiles/"
   },
+  "AdminInfo": {
+    "Email": "ah9303321@gmail.com"
+  },
   "GoogleServiceAccount": {
     "Type": "service_account",
     "ProjectId": "ambient-mystery-423408-u1",
