--- a/PMS-PropertyHapa.API/PMS-PropertyHapa.API.csproj
+++ b/PMS-PropertyHapa.API/PMS-PropertyHapa.API.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Session" Version="2.1.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Stripe.net" Version="45.4.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.26" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.26" />
