--- a/PMS-PropertyHapa.Staff/appsettings.json
+++ b/PMS-PropertyHapa.Staff/appsettings.json
@@ -10,7 +10,7 @@
     "PMS_PropertyHapaContextConnection": "Server=65.108.74.182\\MSSQLSERVER2019;Database=propert2_db;User Id=propert2;Password=!5i65ljG6;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "ServiceUrls": {
-    "VillaAPI": "https://api.propertyhapa.com"
+    "VillaAPI": "https://localhost:7178"
   },
   "ImageURl": {
     "URL": "https://storage.propertyhapa.com/SystemFiles/"
