--- a/PMS-PropertyHapa.Staff/PMS-PropertyHapa.Staff.csproj
+++ b/PMS-PropertyHapa.Staff/PMS-PropertyHapa.Staff.csproj
@@ -537,6 +537,7 @@
 		</PackageReference>
 		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="NReco.PdfGenerator" Version="1.2.1" />
 		<PackageReference Include="Stripe.net" Version="45.4.0" />
 	</ItemGroup>
 
