--- a/PMS-PropertyHapa/PMS-PropertyHapa.csproj
+++ b/PMS-PropertyHapa/PMS-PropertyHapa.csproj
@@ -21,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NReco.PdfGenerator" Version="1.2.1" />
     <PackageReference Include="Stripe.net" Version="45.4.0" />
     <PackageReference Include="Twilio" Version="7.0.3" />
   </ItemGroup>
